# SignalProcessingWorkSpace

./: README.md
Source/C/arburg/: db.c  io.c  io.h  io_type.h  main.c  meson.build  model.c  model.h  model.power_spectrum.c  model_type.h  power_spectrum_test.c
Source/C/arburg/scripts/: 3x3_multiplot_example.p
Source/Python/MEM/: main.py
Source/dotnet/NET.MEM/: NET.MEM.sln
Source/dotnet/NET.MEM/Source/NET.MEM/: ARBurgResult.Calc.cs  ARBurgResult.cs  Model.cs
Source/dotnet/NET.MEM/Source/NET.MEM.C/: NET.MEM.C.csproj  Program.cs
Source/dotnet/NET.MEM/Source/NET.MEM.EvalForm/: App.config  MainForm.Designer.cs  MainForm.Event.cs  MainForm.cs  MainForm.resx  NET.MEM.EvalForm.csproj  Program.cs
Source/dotnet/NET.MEM/Source/NET.MEM.EvalForm/Data/: SignalItem.cs
Source/dotnet/NET.MEM/Source/NET.MEM.EvalForm/IO/: Csv.cs
Source/dotnet/NET.MEM/Source/NET.MEM.EvalForm/Properties/: Resources.Designer.cs  Settings.Designer.cs
Source/dotnet/NET.MEM/Source/NET.MEM.EvalFrom/: MainForm.Designer.cs  MainForm.Event.cs  MainForm.cs  MainForm.resx  NET.MEM.EvalFrom.csproj  Program.cs
Source/dotnet/NET.MEM/Source/NET.MEM.EvalFrom/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Source/dotnet/NET.MEM/Test/NET.MEM.Test/: NET.MEM.Test.csproj  UnitTest1.cs
Source/dotnet/mynah.FFT/: Program.cs  mynah.FFT.csproj  mynah.FFT.sln
Source/dotnet/mynah.FFT/assets/: fft_result.csv
assets/: README.md  m5_ar.csv  m5_power_spectrum.csv  sample_signal.csv
